--- a/css/style.css
+++ b/css/style.css
@@ -1159,10 +1159,14 @@ footer li:last-child {
 
 .sub-text1::after{
     font-size: 12px;
+    top: 6px;
+    left: 120px;
 }
 
 .sub-text2::after{
     font-size: 12px;
+    top: 6px;
+    left: 140px;
 }
 
 }
